--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.8",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -26,6 +27,7 @@
     "framer-motion": "^11.3.2",
     "lightgallery": "^2.7.2",
     "lucide-react": "^0.358.0",
+    "negotiator": "^1.0.0",
     "next": "14.1.3",
     "next-auth": "^5.0.0-beta.20",
     "react": "^18",
@@ -44,6 +46,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
